--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 
 <!-- svetlo blue s tekst v pravoygylnik -->
-<header class="w3-display-container w3-content w3-center" style="max-width:1500px">
-  <img class="w3-panel w3-light-blue" width="1500" height="500">
+<header class="w3-display-container w3-content w3-center" style="max-width:100%">
+  <img class="w3-panel w3-light-blue" width=100% height="500">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-white w3-center">
     <img src="logo_transparent_background.png">
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">ULTRASONIC HUMIDIFIER</h1>
