--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header class="w3-display-container w3-content w3-center" style="max-width:100%">
   <img class="w3-panel w3-light-blue" width=100% height="500">
   <div class="w3-display-middle w3-padding-large w3-border w3-wide w3-text-white w3-center">
-    <img src="logo_transparent_background.png">
+    <img src="logo_transparent_background.png" style="width:70%" >
     <h1 class="w3-hide-medium w3-hide-small w3-xxxlarge">ULTRASONIC HUMIDIFIER</h1>
     <h5 class="w3-hide-large" style="white-space:nowrap">ULTRASONIC HUMIDIFIER</h5>
     <h3 class="w3-hide-medium w3-hide-small">YOUR INSTRUCTIONAL PAL</h3>
